# movieRental

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt  main.cpp
src/: banners.cpp  banners.h  consoleapperance.h  db.cpp  db.h  finance.cpp  finance.h  main.cpp  menu.cpp  menu.h  movies.cpp  movies.h  offer.cpp  offer.h  renting.cpp  renting.h  users.cpp  users.h  utils.cpp  utils.h
src/db/: schema.sql  scheme.sql
